Fixed scrollbar issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -99,13 +99,7 @@ body {
   body::-webkit-scrollbar-thumb:hover {
     background-color: #2EBFA5;
   }
-  
-  body {
-    padding: 0;
-    margin: 0;
-    scrollbar-width: thin;
-    scrollbar-color: #2EBFA5 #13505B;
-  }
+
 
   @keyframes slide-up-opacity {
     from {
